update lower bound

--- a/search/search.ipynb
+++ b/search/search.ipynb
@@ -103,12 +103,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "vectorizer = TfidfVectorizer(max_df=0.5, min_df=0, max_features=200000, use_idf=True)\n",
+    "vectorizer = TfidfVectorizer(max_df=0.5, min_df=0.001, max_features=200000, use_idf=True)\n",
     "\n",
     "weights = vectorizer.fit_transform([\" \".join(tokens) for tokens in data])\n",
     "\n",
@@ -126,11 +126,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_top_features(rownum, weights, features, top_k=15):\n",
+    "def get_top_features(rownum, weights, features, top_k=1):\n",
     "    weight_vec = weights.toarray()[rownum,:]\n",
     "    top_idx = np.argsort(weight_vec)[::-1][:top_k]\n",
     "    return [features[i] for i in top_idx]"
@@ -145,19 +145,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
     "nn = NearestNeighbors(n_neighbors=5, algorithm='auto')\n",
     "\n",
-    "nnfitted = nn.fit(weights)\n",
-    "\n"
+    "nnfitted = nn.fit(weights)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,28 +201,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DocID to query?: 10.1107/S0907444903011156\n",
-      "897\n",
-      " \n",
-      "For your document: Crystal structure of $\\upbeta$-luffin, a ribosome-inactivating protein, at 2.0{\\hspace{0.25em}}{\\{AA}} resolution\n",
-      " \n",
-      "We found the following documents: \n",
-      "['Crystallization and preliminary X-ray study of alkaline $\\\\upbeta$-mannanase from the {alkaliphilicBacillussp}. N16-5', 'Cloning, expression, purification, crystallization and preliminary X-ray diffraction analysis of {HP}1352, a putative {DNA} methyltransferase {inHelicobacter} pylori', 'Structure of xylanase Xys1$\\\\{upDelta}$ {fromStreptomyces} halstedii', 'Crystallization and structure solution of p53 (residues 326{\\\\textendash}356) by molecular replacement using an {NMR} model as template']\n",
-      " \n",
-      "And the following keywords: \n",
-      "['beta_crystal_structure', 'bond_angle_bond_length', 'rips_type', 'three_n_acetylglucosamine', 'nag_molecule', 'n_acetylglucosamine', 'trichosanthin_polyalanyl', 'search_model_trichosanthin_polyalanyl', 'search_model', 'overall_structure', 'molecular_replacement_method', 'bond_angle', 'molecular_replacement', 'bond_length', 'aring_resolution']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "query = input(\"DocID to query?: \")\n",
     "queryTitle = getTitle(query)\n",
