--- a/topicmodeling/cyclic_LDA.ipynb
+++ b/topicmodeling/cyclic_LDA.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
     "blacklist = [t.strip() for t in next(csv.reader(open(\"tools\\\\blacklist.csv\", 'r')))]\n",
     "\n",
     "# levels of R&R terms considered\n",
-    "levels = [0, 1, 2, 3]\n",
+    "levels = [1, 2, 3]\n",
     "\n",
     "# format [term, orig, sentence, docID]\n",
     "inPath = \"v1.csv\"\n",
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,15 +129,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Raw dictionary: 19762 terms\n",
-      "Filtered dictionary: 17000 terms\n"
+      "Raw dictionary: 16391 terms\n",
+      "Filtered dictionary: 826 terms\n"
      ]
     }
    ],
@@ -147,8 +147,8 @@
     "print(\"Raw dictionary: \" + str(len(dictionary)) + \" terms\")\n",
     "\n",
     "# filter out terms that appear in fewer that LOW docs or greater than HIGH percent of docs and use KEEP terms\n",
-    "LOW = 1\n",
-    "HIGH = 1\n",
+    "LOW = 3\n",
+    "HIGH = 0.3\n",
     "KEEP = 17000\n",
     "\n",
     "old_dict = copy.copy(dictionary)\n",
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,14 +292,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[(0, '0.010*\"hydrogen_bond\" + 0.006*\"asymmetric_unit\" + 0.006*\"crystal_structure\" + 0.006*\"dihedral_angle\" + 0.005*\"n_h\" + 0.005*\"o_hydrogen_bond\" + 0.004*\"c_h\" + 0.003*\"benzene_ring\" + 0.003*\"o_h\" + 0.003*\"space_group\"'), (1, '0.004*\"x_ray\" + 0.003*\"crystal_structure\" + 0.002*\"space_group\" + 0.002*\"unit_cell\" + 0.002*\"n_atom\" + 0.002*\"dihedral_angle\" + 0.002*\"aring_resolution\" + 0.002*\"square_planar\" + 0.001*\"unit_cell_parameter\" + 0.001*\"electron_density\"'), (2, '0.024*\"hydrogen_bond\" + 0.009*\"o_h\" + 0.009*\"n_h\" + 0.008*\"o_hydrogen_bond\" + 0.008*\"crystal_structure\" + 0.007*\"c_h\" + 0.005*\"dihedral_angle\" + 0.004*\"water_molecule\" + 0.004*\"crystal_pack\" + 0.004*\"n_o\"'), (3, '0.012*\"crystal_structure\" + 0.006*\"hydrogen_bond\" + 0.005*\"o_atom\" + 0.005*\"n_h\" + 0.004*\"dihedral_angle\" + 0.004*\"o_h\" + 0.004*\"x_ray\" + 0.003*\"c_h\" + 0.003*\"n_atom\" + 0.002*\"space_group\"'), (4, '0.005*\"x_ray\" + 0.003*\"c_h\" + 0.003*\"space_group\" + 0.003*\"crystal_structure\" + 0.002*\"x_ray_diffraction\" + 0.002*\"pi_interaction\" + 0.002*\"asymmetric_unit\" + 0.002*\"hydrogen_bond\" + 0.002*\"o_atom\" + 0.002*\"single_crystal\"'), (5, '0.016*\"c_h\" + 0.015*\"hydrogen_bond\" + 0.009*\"asymmetric_unit\" + 0.009*\"dihedral_angle\" + 0.007*\"o_hydrogen_bond\" + 0.007*\"crystal_structure\" + 0.006*\"o_h\" + 0.006*\"x_ray\" + 0.006*\"pi_interaction\" + 0.005*\"benzene_ring\"'), (6, '0.016*\"hydrogen_bond\" + 0.010*\"crystal_structure\" + 0.009*\"n_h\" + 0.007*\"weak_c_h\" + 0.006*\"o_hydrogen_bond\" + 0.005*\"intermolecular_n_h\" + 0.005*\"dihedral_angle\" + 0.005*\"o_h\" + 0.004*\"asymmetric_unit\" + 0.004*\"n_hydrogen_bond\"')]\n"
+     "ename": "NameError",
+     "evalue": "name 'normalmodel' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-18-01544cd43156>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnormalmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mprint_topics\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'normalmodel' is not defined"
      ]
     }
    ],
@@ -316,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +333,7 @@
     "    \n",
     "    while not done:\n",
     "        \n",
-    "        t = math.ceil(len(newcorpus) * rat)\n",
+    "        t = math.ceil(math.log(len(newcorpus)) * rat)\n",
     "        totalTopics += t\n",
     "        \n",
     "        newmodel = model(newcorpus, t, p, its)\n",
@@ -358,24 +362,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(0, '0.018*\"n_h\" + 0.018*\"n_hydrogen_bond\" + 0.014*\"intermolecular_n_h\" + 0.014*\"asymmetric_unit\" + 0.012*\"n_hydrogen\" + 0.009*\"benzene_ring\" + 0.009*\"o_h\" + 0.008*\"o_hydrogen_bond\" + 0.006*\"x_ray\" + 0.006*\"pi_interaction\"'), (1, '0.011*\"weak_c_h\" + 0.005*\"asymmetric_unit\" + 0.005*\"o_atom\" + 0.005*\"o_hydrogen_bond\" + 0.004*\"o_h\" + 0.004*\"o_interaction\" + 0.004*\"x_ray\" + 0.003*\"weak_c\" + 0.003*\"water_molecule\" + 0.003*\"n_atom\"'), (2, '0.004*\"o_atom\" + 0.003*\"water_molecule\" + 0.003*\"x_ray\" + 0.002*\"octahedral_coordination\" + 0.002*\"asymmetric_unit\" + 0.002*\"single_crystal\" + 0.002*\"active_site\" + 0.002*\"space_group\" + 0.002*\"anion_cation\" + 0.002*\"n_atom\"'), (3, '0.019*\"o_h\" + 0.013*\"o_atom\" + 0.012*\"o_hydrogen_bond\" + 0.011*\"n_h\" + 0.009*\"n_atom\" + 0.007*\"asymmetric_unit\" + 0.007*\"dimensional_network\" + 0.007*\"water_molecule\" + 0.006*\"intermolecular_o_h\" + 0.006*\"c_o\"'), (4, '0.003*\"intermolecular_c_h\" + 0.003*\"x_ray\" + 0.002*\"o_atom\" + 0.002*\"o_hydrogen_bond\" + 0.002*\"c_n_h\" + 0.002*\"c_h_combination\" + 0.002*\"c_bond\" + 0.002*\"o_h\" + 0.002*\"n_atom\" + 0.001*\"pyrazole_ring\"'), (5, '0.006*\"o_h\" + 0.004*\"n_h\" + 0.004*\"n_atom\" + 0.003*\"x_ray\" + 0.003*\"weak_c_h\" + 0.003*\"o_hydrogen_bond\" + 0.003*\"o_atom\" + 0.003*\"pi_interaction\" + 0.002*\"space_group\" + 0.002*\"n_hydrogen_bond\"'), (6, '0.006*\"x_ray\" + 0.003*\"benzene_ring\" + 0.003*\"n_atom\" + 0.003*\"single_crystal\" + 0.002*\"weak_c_h\" + 0.002*\"asymmetric_unit\" + 0.002*\"x_ray_diffraction\" + 0.002*\"dimensional_network\" + 0.002*\"c_torsion_angle\" + 0.002*\"asymmetric_unit_molecule\"'), (7, '0.003*\"weak_c_h\" + 0.003*\"o_interaction\" + 0.002*\"weak_intermolecular_c_h\" + 0.002*\"benzene_ring\" + 0.002*\"phenyl_ring\" + 0.002*\"n_atom\" + 0.002*\"inversion_centre\" + 0.002*\"pi_pi\" + 0.002*\"b_axis\" + 0.002*\"crystallographic_inversion_symmetry\"'), (8, '0.006*\"space_group\" + 0.005*\"x_ray\" + 0.004*\"x_ray_diffraction\" + 0.004*\"unit_cell\" + 0.004*\"aring_resolution\" + 0.003*\"single_crystal\" + 0.002*\"water_molecule\" + 0.002*\"o_atom\" + 0.002*\"unit_cell_parameter\" + 0.001*\"asymmetric_unit\"'), (9, '0.007*\"intermolecular_c_h\" + 0.005*\"o_atom\" + 0.005*\"asymmetric_unit\" + 0.004*\"water_molecule\" + 0.004*\"weak_intermolecular_c_h\" + 0.004*\"n_h\" + 0.003*\"n_atom\" + 0.003*\"o_h\" + 0.003*\"pi_interaction\" + 0.003*\"x_ray\"'), (10, '0.004*\"x_ray\" + 0.003*\"aring_resolution\" + 0.003*\"space_group\" + 0.002*\"asymmetric_unit\" + 0.002*\"unit_cell_parameter\" + 0.002*\"unit_cell\" + 0.002*\"mean_plane\" + 0.002*\"x_ray_diffraction\" + 0.002*\"intramolecular_c_h\" + 0.002*\"c_atom\"'), (11, '0.007*\"x_ray\" + 0.006*\"space_group\" + 0.004*\"unit_cell\" + 0.004*\"unit_cell_parameter\" + 0.004*\"aring_resolution\" + 0.003*\"vapour_diffusion_method\" + 0.003*\"vapour_diffusion\" + 0.003*\"asymmetric_unit\" + 0.003*\"x_ray_diffraction\" + 0.002*\"hang_drop\"'), (12, '0.016*\"n_h\" + 0.016*\"o_hydrogen_bond\" + 0.008*\"intermolecular_n_h\" + 0.007*\"asymmetric_unit\" + 0.007*\"weak_c_h\" + 0.007*\"o_h\" + 0.005*\"benzene_ring\" + 0.004*\"x_ray\" + 0.004*\"pi_pi\" + 0.004*\"c_n_h\"')]\n",
-      "265\n",
-      "[(0, '0.011*\"n_h\" + 0.010*\"o_h\" + 0.009*\"o_hydrogen_bond\" + 0.007*\"n_hydrogen_bond\" + 0.007*\"benzene_ring\" + 0.006*\"intermolecular_n_h\" + 0.005*\"n_hydrogen\" + 0.004*\"asymmetric_unit\" + 0.004*\"weak_c_h\" + 0.004*\"n_atom\"'), (1, '0.001*\"o_h\" + 0.001*\"water_molecule\" + 0.001*\"o_atom\" + 0.001*\"hydrogen_bond_interaction\" + 0.001*\"intermolecular_hydrogen_bond\" + 0.001*\"c_br_h\" + 0.001*\"anion_cation\" + 0.001*\"o_o_h\" + 0.001*\"cl_hydrogen_bond\" + 0.001*\"bipy_chain\"'), (2, '0.002*\"asymmetric_unit\" + 0.002*\"o_hydrogen_bond\" + 0.001*\"water_molecule\" + 0.001*\"cl_hydrogen_bond\" + 0.001*\"square_pyramidal\" + 0.001*\"o_atom\" + 0.001*\"independent_molecule\" + 0.001*\"n_atom\" + 0.001*\"o_h\" + 0.001*\"square_pyramidal_geometry\"')]\n",
-      "78\n",
-      "[(0, '0.002*\"n_h\" + 0.002*\"o_hydrogen_bond\" + 0.001*\"o_h\" + 0.001*\"asymmetric_unit\" + 0.001*\"benzene_ring\" + 0.001*\"intermolecular_n_h\" + 0.001*\"n_atom\" + 0.001*\"water_molecule\" + 0.001*\"weak_c_h\" + 0.001*\"cl_hydrogen_bond\"')]\n",
-      "Total topics: 17\n"
+      "[(0, '0.031*\"crystal_structure\" + 0.027*\"c_h\" + 0.022*\"dihedral_angle\" + 0.022*\"n_h\" + 0.019*\"o_h\" + 0.019*\"asymmetric_unit\" + 0.019*\"o_hydrogen_bond\" + 0.017*\"x_ray\" + 0.014*\"o_atom\" + 0.011*\"n_atom\"')]\n",
+      "Total topics: 1\n"
      ]
     }
    ],
    "source": [
-    "cyclic(0.85, 0.01, 50, 500)"
+    "cyclic(0.95, 0.1, 25, 500)"
    ]
   },
   {
